  In case first line accepts an indent,
  keep the remaining lines' relative.
  Otherwise lines in region get outmost indent,
  same with optional argument

- Commands
  - ipython2.7
  - ipython3

  - py-beginning-of-for-block
  - py-beginning-of-for-block-bol
  - py-end-of-statement-bol
  - py-end-of-top-level-bol

  - py-flycheck-mode - toggle `flycheck-mode' from menu "Checks"


- New helper functions, like
  - py--end-of-block-bol-p
  - py--end-of-clause-bol-p
  etc.

  Functions in a boolean sense just stating if being at an end or
  start no longer a command. Renamed as interanal
  functions with prefix `py--' now.

- TAB-indent from column zero: go to outmost first, lp:1375122
- (I)Python-shell setup made more reliable

New customizables:

- py-imenu-max-items, default is 99
  Sets `imenu-max-items'

- py-python-edit-version, default is ""
  When not empty, fontify according to Python version specified.
  
- py-pdb-executable, default is nil
  Indicate PATH/TO/pdb.

- py-update-gud-pdb-history-p, default is t
  If pdb should provide suggestions WRT file and pdb-path.


New in version 6.2.0
---------------------

- Support for large output
  new commands py-fast-process, py-fast-...
  Fixes: large output makes Emacs freeze, lp:1253907

  Python code now might be processed by an
  - interactive Python shell (DEFAULT)
  - non-interactive Python (`py-fast-process-p', if large output)

  Both processes might run in
  - session, i.e. start from possible previous state (DEFAULT)
  - dedicated, (`py-dedicated-process-p', run in separate process)

- TAB bound to `py-indent-or-complete', completes at EOL.
  Calls to `tab-to-tab-stop' removed, as these would conflict.
  Use `C-q TAB' to insert a literally TAB-character.

- py-fast-complete
  Complete word before point, if any, use `py-fast-process'

- `py-shell-complete-or-indent'
  In shell: complete or indent depending on the context.
  If cursor is at current-indentation and further indent