@@ -3,7 +3,8 @@ language: python
 before_install:
   sudo add-apt-repository -y ppa:cassou/emacs &&
   sudo apt-get update -qq &&
-  sudo apt-get install -qq emacs24 emacs24-el emacs24-common-non-dfsg ipython ipython2.7 ipython3 jython;
+  sudo apt-get install ipython3 &&
+  sudo apt-get install -qq emacs24 emacs24-el emacs24-common-non-dfsg ipython ipython2.7 jython;
 
 env:
   EMACS=emacs24
