@@ -432,6 +432,16 @@ The defun visible is the one that contains point or follows point. "
       (py-end-of-def-or-class)
       (narrow-to-region (point) start))))
 
+(defun py-narrow-to-class ()
+  "Make text outside current class invisible. "
+  (interactive)
+  (save-excursion
+    (let ((start (if (py--statement-opens-class-p)
+                     (point)
+                   (py-beginning-of-class))))
+      (py-end-of-class)
+      (narrow-to-region (point) start))))
+
 ;;  make general form below work also in these cases
 ;;  (defalias 'py-beginning-of-paragraph 'backward-paragraph)
 (defun py-beginning-of-paragraph ()
